# devanshu_project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/deploy/: certbot-renew.sh  nginx.Dockerfile
nginx/: nginx.conf
scripts/: dev.sh
services/admin/: .env.example  Dockerfile  README.md  manage.py
services/admin/dashboard/: asgi.py  middleware.py  settings.py  startup.py  urls.py  wsgi.py
services/admin/dashboard/views/: auth.py  docs.py  health.py  numbers.py  upload.py
services/admin/static/css/: style.css
services/admin/templates/: base.html  login.html  numbers.html  settings.html  upload.html
services/admin/tests/: conftest.py  test_auth.py  test_numbers_crud.py  test_startup.py  test_upload.py
services/api/: .env.example  Dockerfile  README.md  manage.py  openapi.yaml
services/api/api/: asgi.py  middleware.py  schema.py  settings.py  urls.py  utils.py  wsgi.py
services/api/phone_numbers/: serializers.py  throttles.py  urls.py  views.py
services/api/tests/: conftest.py  test_health.py  test_prefixes.py  test_search.py
shared/core/: __init__.py  admin.py  apps.py  forms.py  models.py  pagination.py  search.py  serializers.py  validators.py
shared/core/management/commands/: seed.py
shared/core/migrations/: 0001_initial.py  0002_create_ratelimit_cache.py
